Batch lock feature added
